--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "More Power Electric - Electrical Repair, Installation & Lighting Solutions in Michigan"
-metaTitle: "More Power Electric | Electrical Services in Michigan"
-tagTitle: "More Power Electric"
+description: "Junk Force Michigan - Electrical Repair, Installation & Lighting Solutions in Michigan"
+metaTitle: "Junk Force Michigan | Electrical Services in Michigan"
+tagTitle: "Junk Force Michigan"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/local.css"
 permalink: "/"
@@ -35,13 +35,13 @@ eleventyNavigation:
         Power Your Home or Business with Expert Electrical Services
       </h1>
       <p class="cs-text">
-        At More Power Electric, we provide top-quality electrical repairs,
+        At Junk Force Michigan, we provide top-quality electrical repairs,
         installations, and lighting solutions for residential, commercial, and
         industrial clients across Michigan. From floodlight repairs to LED
         conversions and standby power systems, our licensed electricians ensure
         every project is safe, efficient, and built to last.
       </p>
-      <a href="/electrical-installations/" class="cs-button-solid"
+      <a href="/junk-removal/" class="cs-button-solid"
         >Explore Services</a
       >
       <a href="/about/" class="cs-button-transparent">
@@ -131,9 +131,9 @@ eleventyNavigation:
     </div>
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About More Power Electric</h2>
+      <h2 class="cs-title">About Junk Force Michigan</h2>
       <p class="cs-text">
-        More Power Electric is committed to delivering safe, efficient, and
+        Junk Force Michigan is committed to delivering safe, efficient, and
         dependable electrical solutions for Michigan’s homeowners and
         businesses. From small repairs to large-scale installations, our team
         combines technical expertise with a dedication to customer satisfaction.
@@ -147,7 +147,7 @@ eleventyNavigation:
       </p>
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          My name is Kurt Mauer, owner of More Power Electric. With years of
+          My name is Kurt Mauer, owner of Junk Force Michigan. With years of
           hands-on electrical experience and a passion for delivering
           exceptional service, I ensure every client gets the right solution,
           done right the first time.
@@ -181,7 +181,7 @@ eleventyNavigation:
     </div>
     <div class="cs-right">
       <span class="cs-topper">Electrical Expertise</span>
-      <h2 class="cs-title">More Power Electric</h2>
+      <h2 class="cs-title">Junk Force Michigan</h2>
       <p class="cs-text">
         We offer complete electrical services across Michigan, including system
         repairs, lighting upgrades, LED conversions, generator installations,
@@ -199,10 +199,10 @@ eleventyNavigation:
         upgrading a commercial lighting system or installing a residential
         standby generator, we make sure your power is always ready.
         <br /><br />
-        Trust More Power Electric for professional electrical services that
+        Trust Junk Force Michigan for professional electrical services that
         combine expertise, quality, and customer care.
       </p>
-      <a href="/electrical-installations/" class="button-solid">
+      <a href="/junk-removal/" class="button-solid">
         Learn More About Our Services →
       </a>
     </div>
@@ -226,7 +226,7 @@ eleventyNavigation:
     <ul class="cs-card-group">
       <li class="cs-item">
         <p class="cs-item-p">
-          More Power Electric was outstanding! They fixed our parking lot lights
+          Junk Force Michigan was outstanding! They fixed our parking lot lights
           quickly and even suggested an LED upgrade that saved us money.
           Professional, courteous, and efficient from start to finish.
         </p>
@@ -247,7 +247,7 @@ eleventyNavigation:
       </li>
       <li class="cs-item">
         <p class="cs-item-p">
-          We had a generator installed by More Power Electric and the process
+          We had a generator installed by Junk Force Michigan and the process
           was smooth and stress-free. The team was knowledgeable, friendly, and
           ensured everything was working perfectly.
         </p>
