--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "Learn about More Power Electric’s commitment to reliable electrical solutions, from residential wiring to
+description: "Learn about Junk Force Michigan’s commitment to reliable electrical solutions, from residential wiring to
 commercial installations, serving customers across the Midwest with skill and integrity."
-metaTitle: "About More Power Electric"
+metaTitle: "About Junk Force Michigan"
 tagTitle: "About"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/about.css"
@@ -18,7 +18,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">About Us</h1>
-  {% image './src/images/landing.png', 'More Power Electric office', '', 'lazy',
+  {% image './src/images/landing.png', 'Junk Force Michigan office', '', 'lazy',
   '(max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -36,9 +36,9 @@ eleventyNavigation:
     <!-- Right Content Section-->
     <div class="cs-right">
       <span class="cs-topper">About Us</span>
-      <h2 class="cs-title">About More Power Electric</h2>
+      <h2 class="cs-title">About Junk Force Michigan</h2>
       <p class="cs-text">
-        More Power Electric is a trusted, family-owned company dedicated to
+        Junk Force Michigan is a trusted, family-owned company dedicated to
         delivering safe, efficient, and dependable electrical services. We
         handle residential wiring, commercial installations, system upgrades,
         and electrical troubleshooting across the Midwest.
@@ -52,7 +52,7 @@ eleventyNavigation:
 
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          I’m Kurt Mauer, founder of More Power Electric. My mission from day
+          I’m Kurt Mauer, founder of Junk Force Michigan. My mission from day
           one has been to provide fair pricing, dependable work, and the peace
           of mind that comes from knowing your electrical systems are in expert
           hands.
@@ -136,7 +136,7 @@ eleventyNavigation:
         <li class="cs-faq-item">
           <button class="cs-button">
             <span class="cs-button-text">
-              What makes More Power Electric different?
+              What makes Junk Force Michigan different?
             </span>
           </button>
           <p class="cs-item-p">
@@ -172,10 +172,10 @@ eleventyNavigation:
     </h2>
     <p>
       Quality electrical work means a safer, more efficient property. Contact
-      More Power Electric today and let’s get your project started right.
+      Junk Force Michigan today and let’s get your project started right.
     </p>
     <a href="/contact/" class="button-solid">Free Consultation</a>
   </div>
-  {% image './src/images/final_home_img.png', 'More Power Electric workspace',
+  {% image './src/images/final_home_img.png', 'Junk Force Michigan workspace',
   '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920'%}
 </section>
