--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,8 +1,8 @@
 ---
 layout: "base.html"
-description: "Contact More Power Electric for expert electrical services, residential and commercial wiring, panel
+description: "Contact Junk Force Michigan for expert electrical services, residential and commercial wiring, panel
 upgrades, and reliable 24/7 emergency repairs."
-metaTitle: "Contact More Power Electric | Electrical Services & Repairs"
+metaTitle: "Contact Junk Force Michigan | Electrical Services & Repairs"
 tagTitle: "Contact"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/contact.css"
@@ -18,7 +18,7 @@ eleventyNavigation:
 
 <section id="int-hero">
   <h1 id="home-h">Contact Us</h1>
-  {% image './src/images/contactbannerimg.png', 'More Power Electric customer support team ready to help with your
+  {% image './src/images/contactbannerimg.png', 'Junk Force Michigan customer support team ready to help with your
   electrical needs', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -33,7 +33,7 @@ eleventyNavigation:
       <h2 class="cs-title">Get in Touch</h2>
       <p class="cs-text">
         Whether you need a quick electrical repair, a full home rewiring, a panel upgrade, or expert advice on your next
-        project, More Power Electric is ready to help. Our licensed electricians provide safe, efficient, and affordable
+        project, Junk Force Michigan is ready to help. Our licensed electricians provide safe, efficient, and affordable
         solutions for both residential and commercial clients.
       </p>
     </div>
@@ -95,7 +95,7 @@ eleventyNavigation:
         <source media="(max-width: 600px)" srcset="/images/map.PNG" />
         <source media="(min-width: 601px)" srcset="/images/map.PNG" />
         <img class="cs-img" aria-hidden="true" loading="lazy" decoding="async" src="/images/map.PNG"
-          alt="Map showing More Power Electric service location" width="462" height="438" />
+          alt="Map showing Junk Force Michigan service location" width="462" height="438" />
       </picture>
     </div>
   </div>
@@ -110,7 +110,7 @@ eleventyNavigation:
     <span class="cs-topper">Client Feedback</span>
     <h2 class="cs-title">What Our Customers Say</h2>
     <p class="cs-text">
-      At More Power Electric, we take pride in delivering safe, dependable, and high-quality electrical work. From
+      At Junk Force Michigan, we take pride in delivering safe, dependable, and high-quality electrical work. From
       emergency repairs to major installations, we’ve earned the trust of homeowners and businesses across the area.
       Here’s what some of our satisfied clients have to say.
     </p>
@@ -118,7 +118,7 @@ eleventyNavigation:
       <!-- Review 1 -->
       <li class="cs-item">
         <p class="cs-item-p">
-          More Power Electric was fantastic! They fixed my electrical issue quickly, explained everything clearly, and
+          Junk Force Michigan was fantastic! They fixed my electrical issue quickly, explained everything clearly, and
           made sure everything was safe before leaving. I highly recommend them.
         </p>
         <span class="cs-reviewer">
