--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: "base.html"
-description: "More Power Electric provides expert electrical system repair and installation across Michigan. Residential, commercial, and industrial services including standby power systems, LED conversions, and lighting repairs."
-metaTitle: "More Power Electric - Electrical Services in Michigan"
+description: "Junk Force Michigan provides expert electrical system repair and installation across Michigan. Residential, commercial, and industrial services including standby power systems, LED conversions, and lighting repairs."
+metaTitle: "Junk Force Michigan - Electrical Services in Michigan"
 tagTitle: "Projects"
 preloadImg: "/images/landing.png"
 preloadCSS: "/css/projects.css"
@@ -76,7 +76,7 @@ eleventyNavigation:
       With Us Today
     </h2>
     <p>
-      From electrical repairs to complete installations, More Power Electric
+      From electrical repairs to complete installations, Junk Force Michigan
       keeps Michigan homes, businesses, and facilities running smoothly. Contact
       us today for dependable service and expert results.
     </p>
