--- a/src/pages/servicepages/furniture-hauling.html
+++ b/src/pages/servicepages/furniture-hauling.html
@@ -1,16 +1,16 @@
 ---
 layout: "base.html"
-description: "Professional Standby Generator Installation and Maintenance for Homes and Businesses"
-metaTitle: "More Power Electric"
-tagTitle: "Generator Installation & Maintenance"
-title: "Standby Generator Installation & Maintenance"
-preloadImg: "/images/landing.png"
+description: "Reliable Furniture Hauling and Disposal Services for Homes and Businesses in Michigan"
+metaTitle: "Furniture Hauling | Junk Force Michigan"
+tagTitle: "Furniture Hauling Services"
+title: "Michigan Furniture Hauling & Disposal"
+preloadImg: "/images/furniture_banner.png"
 preloadCSS: "/css/services.css"
-permalink: "/generator-installation-maintenance/"
+permalink: "/furniture-hauling/"
 eleventyNavigation:
-  key: Standby Generator Installation & Maintenance
+  key: Furniture Hauling
   parent: Services
-  order: 700
+  order: 710
 ---
 
 <!-- ============================================ -->
@@ -18,11 +18,11 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">Standby Generator Installation & Maintenance</h1>
+    <h1 id="home-h">Furniture Hauling Services</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/generator_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/generator_banner.png" />
-        <img decoding="async" src="/images/generator_banner.png" alt="standby generator service banner" width="1280"
+        <source media="(max-width: 600px)" srcset="/images/furniture_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/furniture_banner.png" />
+        <img decoding="async" src="/images/furniture_banner.png" alt="furniture hauling service banner" width="1280"
             height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,16 +36,16 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/generator_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/generator_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/generator_0.png"
-                        alt="standby generator installation service" width="542" height="728" />
+                    <source media="(max-width: 600px)" srcset="/images/furniture_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/furniture_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/furniture_0.png"
+                        alt="furniture hauling service in Michigan" width="542" height="728" />
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="gear icon"
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/sofa.svg" alt="sofa icon"
                         width="60" height="60" />
-                    <span class="cs-desc">Reliable Power Solutions</span>
+                    <span class="cs-desc">Reliable Furniture Removal</span>
                 </div>
             </div>
             <ul class="cs-card-group">
@@ -54,11 +54,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Standby Generator Installation
+                        Full-Service Furniture Hauling
                     </h3>
                     <p class="cs-item-text">
-                        Professional installation of home and business standby generators
-                        to ensure uninterrupted power during outages.
+                        From couches and mattresses to desks and dressers, we handle heavy lifting so you don’t have to.
                     </p>
                 </li>
                 <li class="cs-item">
@@ -66,11 +65,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Generator Maintenance & Servicing
+                        Eco-Friendly Disposal
                     </h3>
                     <p class="cs-item-text">
-                        Keep your generator in peak condition with regular maintenance and
-                        expert troubleshooting from certified technicians.
+                        Whenever possible, we donate or recycle your old furniture—keeping usable items out of landfills.
                     </p>
                 </li>
             </ul>
@@ -79,40 +77,35 @@ eleventyNavigation:
             <hr />
             <br /><br />
             <h1 class="cs-title">
-                Expert Generator Services by
-                <span class="cs-color">More Power Electric</span>
+                Expert Furniture Hauling by
+                <span class="cs-color">Junk Force Michigan</span>
             </h1>
             <br />
-            <h3>Dependable Power When You Need It Most</h3>
+            <h3>Same-Day Service • Family-Owned • Affordable Rates</h3>
             <br />
             <p>
-                At More Power Electric, we provide complete standby generator solutions
-                for residential and commercial clients. From selecting the right model
-                to professional installation and routine maintenance, we ensure your
-                property stays powered in any situation.
+                Junk Force Michigan makes furniture removal simple, stress-free, and affordable. Whether you’re upgrading your home or clearing out unwanted items, our team will safely haul away your old furniture the very same day.
             </p>
             <p>
-                Whether you need backup power for your home, office, or facility, our
-                team delivers reliable, code-compliant installations and maintenance
-                services tailored to your needs.
+                From single-item pickups to full home or office clearouts, we provide dependable hauling services with an eco-friendly approach.
             </p>
             <br />
             <hr />
             <br />
             <div class="desktop-only">
-                <h3>Our Generator Service Process</h3>
+                <h3>Our Furniture Hauling Process</h3>
                 <ol>
-                    <li>Initial consultation and site assessment</li>
-                    <li>Generator selection and system design</li>
-                    <li>Professional installation and testing</li>
-                    <li>Ongoing maintenance and performance checks</li>
+                    <li>Call or book your furniture hauling service online</li>
+                    <li>Get a free, no-obligation estimate</li>
+                    <li>Our crew arrives on time—same-day or scheduled</li>
+                    <li>We remove, recycle, or donate your furniture</li>
                 </ol>
-                <h4>Why Choose Our Generator Services?</h4>
+                <h4>Why Choose Junk Force Michigan?</h4>
                 <ul>
-                    <li>Certified, experienced electricians</li>
-                    <li>Full compliance with safety and building codes</li>
-                    <li>Custom power solutions for your property</li>
-                    <li>Emergency service and reliable maintenance plans</li>
+                    <li>Same-day furniture removal</li>
+                    <li>Family-owned and operated</li>
+                    <li>Eco-friendly recycling & donations</li>
+                    <li>Upfront, affordable pricing</li>
                 </ul>
             </div>
         </div>
@@ -127,43 +120,42 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/generator_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/generator_1.png" />
-            <img loading="lazy" decoding="async" src="/images/generator_1.png" alt="standby generator services"
+            <source media="(max-width: 600px)" srcset="/images/furniture_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/furniture_1.png" />
+            <img loading="lazy" decoding="async" src="/images/furniture_1.png" alt="furniture removal services"
                 width="630" height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">Power You Can Count On</span>
+            <span class="cs-topper">Furniture Removal Made Easy</span>
             <br />
             <h3 class="cs-h3">
                 Complete
-                <span class="cs-color">Generator Installation & Maintenance</span>
+                <span class="cs-color">Furniture Hauling & Disposal</span>
             </h3>
             <p class="cs-text">
-                We handle every aspect of standby generator service, from installation
-                to ongoing upkeep, so you’re never left in the dark.
+                Don’t struggle with heavy, bulky items—our crew does the lifting, hauling, and eco-friendly disposal for you.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Expert installation for homes and businesses
+                    Sofa, couch & loveseat removal
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Regular maintenance and inspection services
+                    Mattress & bed frame disposal
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Emergency repair and troubleshooting
+                    Office desks, chairs & cubicles
                 </li>
             </ul>
-            <a href="/contact" class="cs-button-solid">Get a Generator Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Furniture Hauling Quote</a>
         </div>
     </div>
 </section>
@@ -176,61 +168,54 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">FAQs</span>
-            <h2 class="cs-title">Generator Installation & Maintenance FAQs</h2>
+            <h2 class="cs-title">Furniture Hauling FAQs</h2>
             <p class="cs-text">
-                Find answers to common questions about our standby generator services.
-                For custom advice, reach out to our expert team.
+                Have questions about our furniture hauling services? Here are answers to some of the most common ones.
             </p>
         </div>
         <div class="cs-flex-group">
             <ul class="cs-faq-group">
                 <li class="cs-faq-item active">
                     <button class="cs-button">
-                        What types of generators do you install?
+                        What types of furniture do you haul?
                     </button>
                     <p class="cs-item-p">
-                        We install top-rated standby generators from trusted brands for
-                        both residential and commercial applications.
+                        We remove couches, recliners, mattresses, tables, chairs, dressers, desks, and more.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
-                        How often should I service my generator?
+                        Do you offer same-day furniture removal?
                     </button>
                     <p class="cs-item-p">
-                        We recommend servicing your generator at least once a year to ensure
-                        reliable performance.
+                        Yes! We offer fast, same-day service whenever possible—just give us a call at <a href="tel:3134449540">313-444-9540</a>.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Do you offer emergency repairs?</button>
+                    <button class="cs-button">How much does furniture hauling cost?</button>
                     <p class="cs-item-p">
-                        Yes. Our team provides prompt emergency generator repair services to
-                        restore power quickly.
+                        Pricing depends on the size and number of items. We always provide upfront, no-hidden-fee estimates.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
-                        Can you handle both installation and maintenance?
+                        What happens to my old furniture?
                     </button>
                     <p class="cs-item-p">
-                        Absolutely. We provide end-to-end generator services, including
-                        installation, testing, and ongoing maintenance.
+                        We recycle or donate whenever possible—keeping usable items out of landfills.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Is my generator installation safe?</button>
+                    <button class="cs-button">Can you remove office furniture?</button>
                     <p class="cs-item-p">
-                        Yes. All installations are completed by licensed electricians and
-                        comply with safety regulations.
+                        Absolutely. We handle office desks, chairs, cubicles, and more for businesses of all sizes.
                     </p>
                 </li>
             </ul>
             <div class="cs-cta">
-                <h3 class="cs-h3">Ready for Reliable Backup Power?</h3>
+                <h3 class="cs-h3">Ready to Get Rid of Old Furniture?</h3>
                 <p class="cs-cta-p">
-                    Our experts can design and install a standby generator system that
-                    fits your property’s needs and budget.
+                    Our professional team will haul away your unwanted furniture quickly and affordably—so you can enjoy your space again.
                 </p>
                 <a href="/contact" class="cs-button-solid">Contact Us</a>
             </div>
