--- a/src/pages/servicepages/yard-waste.html
+++ b/src/pages/servicepages/yard-waste.html
@@ -1,16 +1,16 @@
 ---
 layout: "base.html"
-description: "LED Lighting Upgrades & Outdoor Lighting Repair for Homes and Businesses"
-metaTitle: "More Power Electric"
-tagTitle: "LED Lighting Upgrades & Outdoor Lighting Repair"
-title: "LED Lighting Upgrades & Outdoor Lighting Repair"
-preloadImg: "/images/landing.png"
+description: "Fast and Affordable Yard Waste Removal Services in Michigan"
+metaTitle: "Junk Force Michigan | Yard Waste Removal"
+tagTitle: "Yard Waste Service"
+title: "Yard Waste Service"
+preloadImg: "/images/yardwaste_banner.png"
 preloadCSS: "/css/services.css"
-permalink: "/led-lighting-upgrades-outdoor-lighting-repair/"
+permalink: "/yard-waste/"
 eleventyNavigation:
-  key: LED Lighting Upgrades & Outdoor Lighting Repair
+  key: Yard Waste
   parent: Services
-  order: 900
+  order: 100
 ---
 
 <!-- ============================================ -->
@@ -18,11 +18,11 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-    <h1 id="home-h">LED Lighting Upgrades & Outdoor Lighting Repair</h1>
+    <h1 id="home-h">Yard Waste Removal Services</h1>
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/images/led_banner.png" />
-        <source media="(min-width: 601px)" srcset="/images/led_banner.png" />
-        <img decoding="async" src="/images/led_banner.png" alt="LED lighting and outdoor lighting repair banner"
+        <source media="(max-width: 600px)" srcset="/images/yardwaste_banner.png" />
+        <source media="(min-width: 601px)" srcset="/images/yardwaste_banner.png" />
+        <img decoding="async" src="/images/yardwaste_banner.png" alt="yard waste removal service banner"
             width="1280" height="568" aria-hidden="true" />
     </picture>
 </section>
@@ -36,16 +36,16 @@ eleventyNavigation:
         <div class="cs-image-group">
             <div class="cs-flex">
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/images/led_0.png" />
-                    <source media="(min-width: 601px)" srcset="/images/led_0.png" />
-                    <img loading="lazy" decoding="async" src="/images/led_0.png" alt="LED lighting installation"
+                    <source media="(max-width: 600px)" srcset="/images/yardwaste_0.png" />
+                    <source media="(min-width: 601px)" srcset="/images/yardwaste_0.png" />
+                    <img loading="lazy" decoding="async" src="/images/yardwaste_0.png" alt="yard debris removal"
                         width="542" height="728" />
                 </picture>
                 <div class="cs-box">
                     <img class="cs-box-icon" loading="lazy" decoding="async"
-                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/gear-white.svg" alt="gear icon"
+                        src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/recycle-white.svg" alt="recycle icon"
                         width="60" height="60" />
-                    <span class="cs-desc">Professional Lighting Experts</span>
+                    <span class="cs-desc">Eco-Friendly Yard Waste Disposal</span>
                 </div>
             </div>
             <ul class="cs-card-group">
@@ -54,11 +54,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        LED Lighting Upgrades
+                        Brush & Branch Removal
                     </h3>
                     <p class="cs-item-text">
-                        Enhance your home or business with energy-efficient LED lighting
-                        solutions that lower costs and improve ambiance.
+                        Clear out piles of branches, brush, and trimmings quickly and affordably.
                     </p>
                 </li>
                 <li class="cs-item">
@@ -66,11 +65,10 @@ eleventyNavigation:
                         <img class="cs-h3-icon" aria-hidden="true" loading="lazy" decoding="async"
                             src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/circle-check.svg" alt="icon"
                             width="32" height="32" />
-                        Outdoor Lighting Repair
+                        Leaf & Grass Disposal
                     </h3>
                     <p class="cs-item-text">
-                        Restore safety and curb appeal with expert outdoor lighting repairs,
-                        including landscape, security, and pathway lighting.
+                        We haul away bags or loose piles of leaves and yard clippings with no hassle.
                     </p>
                 </li>
             </ul>
@@ -79,39 +77,38 @@ eleventyNavigation:
             <hr />
             <br /><br />
             <h1 class="cs-title">
-                LED Lighting & Outdoor Repairs by
-                <span class="cs-color">More Power Electric</span>
+                Yard Waste Removal by
+                <span class="cs-color">Junk Force Michigan</span>
             </h1>
             <br />
-            <h3>Brighten Your Space and Boost Efficiency</h3>
+            <h3>Reliable, Affordable, and Eco-Friendly Yard Cleanup</h3>
             <br />
             <p>
-                At More Power Electric, we provide top-quality LED lighting upgrades
-                and outdoor lighting repair services that enhance both style and
-                function. From retrofitting existing fixtures to installing new,
-                energy-saving systems, we deliver lighting that lasts.
+                At Junk Force Michigan, we specialize in hauling away all types of yard waste —
+                from branches and brush to leaves, grass clippings, and outdoor debris.
+                Our eco-friendly approach ensures your waste is disposed of responsibly.
             </p>
             <p>
-                Whether it’s your backyard, storefront, or office space, we design and
-                maintain lighting solutions that match your needs and budget.
+                As a family-owned business, we pride ourselves on same-day service, affordable
+                rates, and a commitment to keeping Michigan neighborhoods clean and beautiful.
             </p>
             <br />
             <hr />
             <br />
             <div class="desktop-only">
-                <h3>Our Lighting Service Process</h3>
+                <h3>Our Yard Waste Removal Process</h3>
                 <ol>
-                    <li>Initial lighting assessment and consultation</li>
-                    <li>Recommendation of energy-efficient solutions</li>
-                    <li>Professional installation or repair</li>
-                    <li>Final testing and customer approval</li>
+                    <li>Schedule a convenient pick-up time</li>
+                    <li>Our crew collects your yard debris</li>
+                    <li>We recycle or compost yard waste responsibly</li>
+                    <li>Final clean-up and customer approval</li>
                 </ol>
-                <h4>Why Choose Our Lighting Services?</h4>
+                <h4>Why Choose Junk Force Michigan?</h4>
                 <ul>
-                    <li>Certified electricians with lighting expertise</li>
-                    <li>Specialists in LED retrofits and upgrades</li>
-                    <li>Fast outdoor lighting repair response</li>
-                    <li>Long-lasting, energy-efficient solutions</li>
+                    <li>Same-day yard waste pickup available</li>
+                    <li>Affordable, transparent pricing</li>
+                    <li>Eco-friendly composting & recycling</li>
+                    <li>Family-owned and community-focused</li>
                 </ul>
             </div>
         </div>
@@ -126,43 +123,43 @@ eleventyNavigation:
 <section id="services-563">
     <div class="cs-container">
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/images/led_1.png" />
-            <source media="(min-width: 601px)" srcset="/images/led_1.png" />
-            <img loading="lazy" decoding="async" src="/images/led_1.png" alt="LED lighting service" width="630"
+            <source media="(max-width: 600px)" srcset="/images/yardwaste_1.png" />
+            <source media="(min-width: 601px)" srcset="/images/yardwaste_1.png" />
+            <img loading="lazy" decoding="async" src="/images/yardwaste_1.png" alt="yard waste removal service" width="630"
                 height="528" aria-hidden="true" />
         </picture>
         <div class="cs-content">
-            <span class="cs-topper">Lighting You Can Rely On</span>
+            <span class="cs-topper">Yard Waste Made Easy</span>
             <br />
             <h3 class="cs-h3">
                 Professional
-                <span class="cs-color">LED & Outdoor Lighting Services</span>
+                <span class="cs-color">Yard Waste Removal Services</span>
             </h3>
             <p class="cs-text">
-                From upgrading outdated fixtures to repairing outdoor lighting systems,
-                we provide dependable electrical services that make your property shine.
+                From seasonal cleanups to storm debris, we haul away all your unwanted yard waste
+                so you can enjoy a clean and tidy outdoor space.
             </p>
             <ul class="cs-ul">
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Complete LED lighting retrofits
+                    Branches, sticks, and brush piles
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Outdoor security and landscape lighting repair
+                    Grass clippings, leaves, and mulch
                 </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async"
                         src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow"
                         width="16" height="18" />
-                    Customized energy-efficient lighting solutions
+                    Storm debris and seasonal cleanup
                 </li>
             </ul>
-            <a href="/contact" class="cs-button-solid">Get a Lighting Service Quote</a>
+            <a href="/contact" class="cs-button-solid">Get a Yard Waste Quote</a>
         </div>
     </div>
 </section>
@@ -175,63 +172,57 @@ eleventyNavigation:
     <div class="cs-container">
         <div class="cs-content">
             <span class="cs-topper">FAQs</span>
-            <h2 class="cs-title">LED Lighting & Outdoor Repair FAQs</h2>
+            <h2 class="cs-title">Yard Waste Removal FAQs</h2>
             <p class="cs-text">
-                Get quick answers about our LED lighting upgrades and outdoor lighting
-                repair services. For tailored recommendations, contact our experts.
+                Find answers to common questions about our yard waste hauling services.
+                For special requests or large projects, contact our team today.
             </p>
         </div>
         <div class="cs-flex-group">
             <ul class="cs-faq-group">
                 <li class="cs-faq-item active">
                     <button class="cs-button">
-                        What types of LED lighting upgrades do you offer?
+                        What types of yard waste do you remove?
                     </button>
                     <p class="cs-item-p">
-                        We handle full LED retrofits, fixture replacements, and energy
-                        efficiency upgrades for residential and commercial spaces.
+                        We haul branches, brush, leaves, grass clippings, mulch, and more.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Can you repair outdoor security lights?</button>
+                    <button class="cs-button">Do you recycle yard waste?</button>
                     <p class="cs-item-p">
-                        Yes. We repair and replace outdoor lighting including security,
-                        landscape, and pathway fixtures.
+                        Yes. Whenever possible, we recycle or compost yard debris to reduce landfill use.
                     </p>
                 </li>
                 <li class="cs-faq-item">
                     <button class="cs-button">
-                        Do LED lighting upgrades really save money?
+                        How quickly can you pick up my yard waste?
                     </button>
                     <p class="cs-item-p">
-                        Absolutely. LED lighting uses significantly less energy and lasts
-                        longer, reducing both electricity and replacement costs.
+                        We offer same-day and next-day yard waste removal across Michigan.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">
-                        How quickly can you respond to outdoor lighting issues?
-                    </button>
+                    <button class="cs-button">Do I need to bag my yard waste?</button>
                     <p class="cs-item-p">
-                        We aim for fast service, often providing same-week repairs for
-                        urgent outdoor lighting problems.
+                        No, but if bagged, it makes removal even faster. Our crew will collect loose piles as well.
                     </p>
                 </li>
                 <li class="cs-faq-item">
-                    <button class="cs-button">Do you offer custom lighting designs?</button>
+                    <button class="cs-button">How much does yard waste removal cost?</button>
                     <p class="cs-item-p">
-                        Yes. We create lighting plans tailored to your property's layout,
-                        style, and safety needs.
+                        Pricing depends on the volume of yard debris, but
+                        we guarantee affordable, transparent rates.
                     </p>
                 </li>
             </ul>
             <div class="cs-cta">
-                <h3 class="cs-h3">Need Brighter, Safer Lighting?</h3>
+                <h3 class="cs-h3">Ready to Clear Out Yard Waste?</h3>
                 <p class="cs-cta-p">
-                    Our lighting experts can design, install, and repair systems that make
-                    your property shine day and night.
+                    Junk Force Michigan provides fast, affordable, and eco-friendly
+                    yard waste removal services you can rely on.
                 </p>
-                <a href="/contact" class="cs-button-solid">Contact Us</a>
+                <a href="/contact" class="cs-button-solid">Schedule Yard Waste Pickup</a>
             </div>
         </div>
     </div>
